--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "pg": "^8.11.3",
+    "react-contextmenu": "^2.14.0",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0"
   }
